--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <nav class="top-nav">
-        <a href="#" class="active"><img src="./logo/logo.svg" /></a>
+        <a href="#" class="active"><img src="./logo/logo.svg" alt="logo"/></a>
         <div class="nav-menu">
           <ul>
             <li><a href="#">About</a></li>
@@ -27,7 +27,7 @@
         </div>
       </nav>
       <h1>We are creatives</h1>
-      <img src="./icons/icon-arrow-down.svg" />
+      <img src="./icons/icon-arrow-down.svg" alt="arrow"/>
     </header>
     <main>
       <section class="section-box">
@@ -79,7 +79,7 @@
         </div>
         <div class="container">
           <article class="testimonial-box">
-            <img src="./people/image-emily.jpg" />
+            <img src="./people/image-emily.jpg" alt="emily" />
             <p>
               We put our trust in Sunnyside and they delivered, making sure our
               needs were met and deadlines were always hit.
@@ -88,7 +88,7 @@
             <h4>Marketing Director</h4>
           </article>
           <article class="testimonial-box">
-            <img class="thomas" src="./people/image-thomas.jpg" />
+            <img class="thomas" src="./people/image-thomas.jpg" alt="thomas" />
             <p>
               Sunnyside’s enthusiasm coupled with their keen interest in our
               brand’s success made it a satisfying and enjoyable experience.
@@ -97,7 +97,7 @@
             <h4>Chief Operating Officer</h4>
           </article>
           <article class="testimonial-box">
-            <img src="./people/image-jennie.jpg" />
+            <img src="./people/image-jennie.jpg" alt="jennie" />
             <p>
               Incredible end result! Our sales increased over 400% when we
               worked with Sunnyside. Highly recommended!
@@ -108,15 +108,15 @@
         </div>
       </section>
       <section class="section-gallery">
-        <img src="./photos/image-gallery-milkbottles.jpg" alt="" />
-        <img src="./photos/image-gallery-orange.jpg" alt="" />
-        <img src="./photos/image-gallery-cone.jpg" alt="" />
-        <img src="./photos/image-gallery-sugarcubes.jpg" alt="" />
+        <img src="./photos/image-gallery-milkbottles.jpg" alt="milk" />
+        <img src="./photos/image-gallery-orange.jpg" alt="orange" />
+        <img src="./photos/image-gallery-cone.jpg" alt="cone" />
+        <img src="./photos/image-gallery-sugarcubes.jpg" alt="sugar" />
       </section>
     </main>
     <footer>
       <div class="logo">
-        <img class="logo-footer" src="./logo/logo-green.svg" alt="" />
+        <img class="logo-footer" src="./logo/logo-green.svg" alt="logo-green" />
       </div>
       <nav class="menu-list">
         <ul>
@@ -128,19 +128,19 @@
       <nav class="social-list">
         <ul>
           <li>
-            <a href="#"><img class="svg-white" src="./icons/icon-facebook.svg" alt="" /></a>
+            <a href="#"><img class="svg-white" src="./icons/icon-facebook.svg" alt="facebook" /></a>
           </li>
 
           <li>
-            <a href="#"><img class="svg-white" src="./icons/icon-instagram.svg" alt="" /></a>
+            <a href="#"><img class="svg-white" src="./icons/icon-instagram.svg" alt="instagram" /></a>
           </li>
 
           <li>
-            <a href="#"><img class="svg-white" src="./icons/icon-twitter.svg" alt="" /></a>
+            <a href="#"><img class="svg-white" src="./icons/icon-twitter.svg" alt="twitter" /></a>
           </li>
 
           <li>
-            <a href="#"><img class="svg-white" src="./icons/icon-pinterest.svg" alt="" /></a>
+            <a href="#"><img class="svg-white" src="./icons/icon-pinterest.svg" alt="pinterest" /></a>
           </li>
         </ul>
       </nav>
